[package]
name = "lending_dapp"
version = "0.1.0"
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw20 = "0.13.2"
cw20-base = "0.13.2"
cw-storage-plus = "0.13.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
schemars = "0.8.3"
thiserror = "1.0.30"

[dev-dependencies]
cw-multi-test = "0.13.4"

